--- a/app/src/main/res/layout/fragment_new_album.xml
+++ b/app/src/main/res/layout/fragment_new_album.xml
@@ -90,15 +90,27 @@
         />
 
 
-    <Button
-        android:textColor="#7a31d6"
-        android:textSize="18dp"
-        android:textStyle="bold"
-        android:layout_margin="20dp"
-        android:id="@+id/btnImage"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Chọn hình ảnh" />
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:text="Chọn hình ảnh"
+            android:textColor="#7a31d6"
+            android:textSize="18dp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            tools:src="@tools:sample/avatars" />
+    </LinearLayout>
     <TextView
         android:layout_margin="20dp"
         android:id="@+id/textView3"
