--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -21,7 +21,7 @@
 
     <AutoCompleteTextView
         android:id="@+id/search_view"
-        android:layout_width="387dp"
+        android:layout_width="397dp"
         android:layout_height="39dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
@@ -29,6 +29,7 @@
         android:background="@drawable/search_view_background"
         android:completionThreshold="1"
         android:drawableLeft="@drawable/ic_search"
+        android:hint="Search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
