[Add new podcast] update back imgview

--- a/app/src/main/res/layout/fragment_add_new_podcast.xml
+++ b/app/src/main/res/layout/fragment_add_new_podcast.xml
@@ -72,7 +72,7 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textAlignment="center"
-        android:text="TextView" />
+        android:text="" />
 
     <TextView
         android:layout_margin="30dp"
