--- a/app/src/main/res/layout/popup_more_horiz.xml
+++ b/app/src/main/res/layout/popup_more_horiz.xml
@@ -8,7 +8,6 @@
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-
         android:id="@+id/clShareChannel"
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -17,8 +16,8 @@
         android:layout_marginBottom="13dp"
         android:paddingVertical="13dp"
         android:paddingRight="15dp"
-        android:paddingLeft="20dp"
-        >
+        android:paddingLeft="20dp">
+
         <TextView
             android:id="@+id/test"
             android:layout_width="wrap_content"
@@ -32,7 +31,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-
         <ImageView
             android:id="@+id/ivShareChannel"
             android:layout_width="wrap_content"
@@ -42,8 +40,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.4" />
-
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
     <androidx.constraintlayout.widget.ConstraintLayout
