--- a/app/src/main/res/layout/fragment_add_new_podcast.xml
+++ b/app/src/main/res/layout/fragment_add_new_podcast.xml
@@ -72,7 +72,7 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textAlignment="center"
-        android:text="" />
+        android:text="TextView" />
 
     <TextView
         android:layout_margin="30dp"
@@ -138,7 +138,7 @@
 
                 android:text="Tên Album " />
             <TextView
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="30dp"
                 android:id="@+id/txtEsposideName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -148,7 +148,7 @@
                 android:text="Tên Tập  " />
 
             <TextView
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="30dp"
                 android:id="@+id/txtImage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -158,7 +158,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="30dp"
                 android:id="@+id/txtdes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -202,15 +202,14 @@
                 android:layout_height="80dp"
                 android:layout_marginLeft="20dp"
                 app:riv_corner_radius="8dp" />
-
             <TextView
-                android:id="@+id/txtNewDes"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
+                android:id="@+id/txtNewDes"
                 android:lines="9"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
 
-                />
+                 />
 
 
         </TableRow>
