--- a/app/src/main/res/layout/fragment_new_album.xml
+++ b/app/src/main/res/layout/fragment_new_album.xml
@@ -29,7 +29,7 @@
             android:textSize="20dp"
             android:textStyle="bold"
             android:textColor="@color/black"
-            android:text="Ablum mới " />
+            android:text="Ablum đã có " />
 
         <TextView
             android:id="@+id/txtXong"
@@ -90,27 +90,15 @@
         />
 
 
-    <LinearLayout
+    <Button
+        android:textColor="#7a31d6"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        android:layout_margin="20dp"
+        android:id="@+id/btnImage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btnImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:text="Chọn hình ảnh"
-            android:textColor="#7a31d6"
-            android:textSize="18dp"
-            android:textStyle="bold" />
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            tools:src="@tools:sample/avatars" />
-    </LinearLayout>
+        android:text="Chọn hình ảnh" />
     <TextView
         android:layout_margin="20dp"
         android:id="@+id/textView3"
