--- a/app/src/main/res/layout/fragment_xem_tat_ca.xml
+++ b/app/src/main/res/layout/fragment_xem_tat_ca.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imgBack"
+            android:id="@+id/ivBack3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/baseline_arrow_back_ios_24" />
