--- a/app/src/main/res/layout/list_opisode.xml
+++ b/app/src/main/res/layout/list_opisode.xml
@@ -11,7 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="16 tháng 3"
-        android:textSize="16dp"/>
+        android:textSize="16dp"
+        android:layout_marginTop="5dp"/>
 
     <TextView
         android:id="@+id/nameOpisode"
@@ -20,13 +21,18 @@
         android:text="#25 - người lớn cô đơn"
         android:textSize="20dp"
         android:textColor="#000000"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:layout_marginTop="5dp"/>
 
     <TextView
         android:id="@+id/descriptOpisode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Mình là Giang, mình là người lớn và mình thỉnh thoảng cũng cô đơn"
+        android:maxLines="2"
+        android:ellipsize="end"
         android:textSize="18dp"/>
 
 
@@ -35,7 +41,8 @@
         android:layout_height="wrap_content"
         android:background="@drawable/bg_icon_circle"
         android:backgroundTint="#E9E8E9"
-        android:src="@drawable/play_arrow_purple" />
+        android:src="@drawable/play_arrow_purple"
+        android:layout_marginVertical="5dp"/>
 
 
 </LinearLayout>
