--- a/app/src/main/res/layout/list_tap.xml
+++ b/app/src/main/res/layout/list_tap.xml
@@ -35,7 +35,8 @@
             android:layout_height="25dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="9dp"
-            android:background="@drawable/bg_icon_circle_grey"
+            android:background="@drawable/bg_icon_circle"
+            android:backgroundTint="#E9E8E9"
             android:src="@drawable/play_arrow_purple"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/txtPhut"
