--- a/app/src/main/res/layout/item_album.xml
+++ b/app/src/main/res/layout/item_album.xml
@@ -19,7 +19,7 @@
 
     <TextView
         android:id="@+id/tvAlbumName"
-        android:layout_width="wrap_content"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textColor="@color/black"
