--- a/app/src/main/res/layout/item_danh_muc.xml
+++ b/app/src/main/res/layout/item_danh_muc.xml
@@ -22,8 +22,11 @@
         android:layout_marginBottom="20dp"
         android:text="TextView"
         android:textColor="#FFFCFC"
-        android:textSize="16dp"
+        android:textSize="20dp"
         android:textStyle="bold"
+        android:background="@drawable/text_background"
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_centerInParent="true"
         app:layout_constraintBottom_toBottomOf="@+id/ivDanhMuc"
         app:layout_constraintStart_toStartOf="@+id/ivDanhMuc" />
 </androidx.constraintlayout.widget.ConstraintLayout>
