--- a/app/src/main/res/layout/fragment_add_new_podcast.xml
+++ b/app/src/main/res/layout/fragment_add_new_podcast.xml
@@ -7,7 +7,6 @@
     android:orientation="vertical"
     tools:context=".Profile.AddNewPodcastFragment">
 
-
     <LinearLayout
         android:layout_margin="5dp"
         android:layout_width="match_parent"
@@ -43,179 +42,173 @@
             android:text="Xong" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/txtChonAudio"
-        android:layout_margin="30dp"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="#7a31d6"
-        android:textStyle="bold"
-        android:textSize="21dp"
-        android:text="Chọn File Audio" />
-
-    <Button
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:textSize="20dp"
-        android:id="@+id/btnAddAudio"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textAlignment="center"
-        android:text="Chọn File Audio " />
-
-    <TextView
-        android:id="@+id/txtNameUri"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textAlignment="center"
-        android:text="" />
-
-    <TextView
-        android:layout_margin="30dp"
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Chọn danh mục "
-        android:textColor="#7a31d6"
-        android:textStyle="bold"
-        android:textSize="21dp"/>
-
-    <TextView
-        android:id="@+id/txtChonDanhmuc"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp"
-        android:textSize="21dp"
-        android:textStyle="bold"
-        android:textAlignment="center"
-
-        android:text="Tất cả danh mục" />
-
-    <TextView
-        android:id="@+id/txtChonAlbum"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="#7a31d6"
-        android:textSize="21dp"
-        android:textStyle="bold"
-        android:layout_margin="30dp"
-        android:text="Chọn Album " />
-
-    <Spinner
-        android:id="@+id/spnAlbum"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="21dp"
-        android:textStyle="bold"
-        android:textAlignment="center"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-
-
-        />
-
-    <TableLayout
-        android:layout_margin="30dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
             <TextView
-                android:id="@+id/txtAlbumName"
-                android:layout_width="wrap_content"
+                android:id="@+id/txtChonAudio"
+                android:layout_margin="30dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#7a31d6"
+                android:textStyle="bold"
+                android:textSize="21dp"
+                android:text="Chọn File Audio" />
+            <Button
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:textSize="20dp"
+                android:id="@+id/btnAddAudio"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-
-
-                android:text="Tên Album " />
+                android:textAlignment="center"
+                android:text="Chọn File Audio " />
             <TextView
-                android:layout_marginLeft="20dp"
-                android:id="@+id/txtEsposideName"
-                android:layout_width="wrap_content"
+                android:id="@+id/txtNameUri"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:textStyle="bold"
-
-                android:text="Tên Tập  " />
-
+                android:textAlignment="center"
+                android:text="" />
             <TextView
-                android:layout_marginLeft="20dp"
-                android:id="@+id/txtImage"
-                android:layout_width="wrap_content"
+                android:layout_margin="30dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
-
-                android:text="Hình ảnh "
+                android:text="Chọn danh mục "
+                android:textColor="#7a31d6"
+                android:textStyle="bold"
+                android:textSize="21dp"/>
+            <TextView
+                android:id="@+id/txtChonDanhmuc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp"
+                android:textSize="21dp"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:text="Tất cả danh mục" />
+            <TextView
+                android:layout_margin="30dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Tiêu đề "
+                android:textColor="#7a31d6"
+                android:textStyle="bold"
+                android:textSize="21dp"/>
+            <EditText
+                android:id="@+id/etTitle4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp"
+                android:textSize="21dp" />
+            <TextView
+                android:layout_margin="30dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Mô tả "
+                android:textColor="#7a31d6"
+                android:textStyle="bold"
+                android:textSize="21dp"/>
+            <EditText
+                android:id="@+id/etDescription4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp"
+                android:textSize="21dp" />
+            <TextView
+                android:id="@+id/txtChonAlbum"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#7a31d6"
+                android:textSize="21dp"
+                android:textStyle="bold"
+                android:layout_margin="30dp"
+                android:text="Chọn Album " />
+            <Spinner
+                android:id="@+id/spnAlbum"
+                android:layout_width="347dp"
+                android:layout_height="37dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:textAlignment="center"
+                android:textSize="21dp"
                 android:textStyle="bold" />
-
-            <TextView
-                android:layout_marginLeft="20dp"
-                android:id="@+id/txtdes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:textStyle="bold"
-
-                android:text="Mô tả " />
-
-
-        </TableRow>
-
-
-
-
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-            <TextView
-                android:id="@+id/txtNewAlbumName"
-                android:layout_width="30dp"
-                android:layout_height="wrap_content"
-                android:lines="9"
-
-
-                 />
-            <TextView
-                android:layout_marginLeft="20dp"
-                android:id="@+id/txtNewEsposideName"
-                android:layout_width="30dp"
-                android:layout_height="wrap_content"
-                android:lines="9"
-
-
-                 />
-
-            <com.makeramen.roundedimageview.RoundedImageView
-                android:id="@+id/newImage"
-                android:layout_marginTop="30dp"
-                android:layout_width="60dp"
-                android:layout_height="80dp"
-                android:layout_marginLeft="20dp"
-                app:riv_corner_radius="8dp" />
-
-            <TextView
-                android:id="@+id/txtNewDes"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:lines="9"
-
-                />
-
-
-        </TableRow>
-
-
-    </TableLayout>
+            <TableLayout
+                android:layout_margin="30dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/txtAlbumName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textStyle="bold"
+                        android:text="Tên Album " />
+                    <TextView
+                        android:layout_marginLeft="20dp"
+                        android:id="@+id/txtEsposideName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textStyle="bold"
+                        android:text="Tên Tập  " />
+                    <TextView
+                        android:layout_marginLeft="20dp"
+                        android:id="@+id/txtImage"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Hình ảnh "
+                        android:textStyle="bold" />
+                    <TextView
+                        android:layout_marginLeft="20dp"
+                        android:id="@+id/txtdes"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textStyle="bold"
+                        android:text="Mô tả " />
+                </TableRow>
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
+                    <TextView
+                        android:id="@+id/txtNewAlbumName"
+                        android:layout_width="30dp"
+                        android:layout_height="wrap_content"
+                        android:lines="9" />
+                    <TextView
+                        android:layout_marginLeft="20dp"
+                        android:id="@+id/txtNewEsposideName"
+                        android:layout_width="30dp"
+                        android:layout_height="wrap_content"
+                        android:lines="9" />
+                    <com.makeramen.roundedimageview.RoundedImageView
+                        android:id="@+id/newImage"
+                        android:layout_marginTop="30dp"
+                        android:layout_width="60dp"
+                        android:layout_height="80dp"
+                        android:layout_marginLeft="20dp"
+                        app:riv_corner_radius="8dp" />
+                    <TextView
+                        android:id="@+id/txtNewDes"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:lines="9" />
+                </TableRow>
+            </TableLayout>
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
