--- a/app/src/main/res/layout/fragment_edit_my_podcast.xml
+++ b/app/src/main/res/layout/fragment_edit_my_podcast.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,264 +7,176 @@
     android:orientation="vertical"
     tools:context=".Profile.AddNewPodcastFragment">
 
-
     <LinearLayout
+        android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <LinearLayout
-            android:layout_margin="5dp"
-            android:layout_width="match_parent"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imgBack"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imgBack"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:src="@drawable/baseline_arrow_back_ios_24" />
-            <TextView
-                android:id="@+id/txtAddNewPodcast"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_weight="1"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:text="My Podcast " />
-
-
-
-
-        </LinearLayout>
+            android:layout_gravity="left"
+            android:src="@drawable/baseline_arrow_back_ios_24" />
 
         <TextView
-            android:id="@+id/txtChonAudio"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
+            android:id="@+id/txtAddNewPodcast"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#7a31d6"
-            android:textStyle="bold"
-            android:textSize="21dp"
-            android:text="Chọn File Audio" />
-
-        <Button
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
+            android:gravity="center"
+            android:layout_weight="1"
             android:textSize="20dp"
-            android:id="@+id/btnAddAudio"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:textAlignment="center"
-            android:text="Chọn File Audio " />
-
-        <TextView
-            android:id="@+id/txtNameUri"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textAlignment="center"
-            android:text="" />
-
-        <TextView
-            android:layout_margin="30dp"
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Chọn danh mục "
-            android:textColor="#7a31d6"
-            android:textStyle="bold"
-            android:textSize="21dp"/>
-
-        <TextView
-            android:id="@+id/txtChonDanhmuc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:layout_marginRight="30dp"
-            android:layout_marginLeft="30dp"
-            android:textSize="21dp"
-            android:textStyle="bold"
-            android:textAlignment="center"
-
-            android:text="Tất cả danh mục" />
-
-        <TextView
-            android:id="@+id/txtChonAlbum"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#7a31d6"
-            android:textSize="21dp"
-            android:textStyle="bold"
-            android:layout_margin="30dp"
-            android:text="Chọn Album " />
-
-        <Spinner
-            android:id="@+id/spnAlbum"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="21dp"
-            android:textStyle="bold"
-            android:textAlignment="center"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
+            android:textColor="@color/black"
+            android:text="My Podcast " />
 
 
-            />
+    </LinearLayout>
 
-        <TableLayout
-            android:layout_margin="30dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/txtAlbumName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textStyle="bold"
-
-
-                    android:text="Tên Album " />
-                <TextView
-                    android:layout_marginLeft="20dp"
-                    android:id="@+id/txtEsposideName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:textStyle="bold"
-
-                    android:text="Tên Tập  " />
-
-                <TextView
-                    android:layout_marginLeft="20dp"
-                    android:id="@+id/txtImage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-
-                    android:text="Hình ảnh "
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_marginLeft="20dp"
-                    android:id="@+id/txtdes"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:textStyle="bold"
-
-                    android:text="Mô tả " />
-
-
-            </TableRow>
-
-
-
-
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
-                <TextView
-                    android:id="@+id/txtNewAlbumName"
-                    android:layout_width="30dp"
-                    android:layout_height="wrap_content"
-                    android:lines="9"
-
-
-                    />
-                <TextView
-                    android:layout_marginLeft="20dp"
-                    android:id="@+id/txtNewEsposideName"
-                    android:layout_width="30dp"
-                    android:layout_height="wrap_content"
-                    android:lines="9"
-
-
-                    />
-
-                <com.makeramen.roundedimageview.RoundedImageView
-                    android:id="@+id/newImage"
-                    android:layout_marginTop="30dp"
-                    android:layout_width="60dp"
-                    android:layout_height="80dp"
-                    android:layout_marginLeft="20dp"
-                    app:riv_corner_radius="8dp" />
-
-                <TextView
-                    android:id="@+id/txtNewDes"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:lines="9"
-
-                    />
-
-
-            </TableRow>
-
-
-        </TableLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <Button
-                android:id="@+id/button4"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-                android:layout_marginRight="5dp"
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="30dp"
+                android:text="Danh mục "
+                android:textColor="#7a31d6"
+                android:textSize="21dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txtChonDanhmuc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:text="Tất cả danh mục"
+                android:textAlignment="center"
+                android:textSize="21dp"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/txtChonAlbum"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="30dp"
+                android:text="Album "
+                android:textColor="#7a31d6"
+                android:textSize="21dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/spnAlbum"
+                android:layout_width="347dp"
+                android:layout_height="37dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:textAlignment="center"
+                android:textSize="21dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="30dp"
+                android:text="Tiêu đề "
+                android:textColor="#7a31d6"
+                android:textSize="21dp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/etTitle4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:textSize="21dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="30dp"
+                android:text="Mô tả "
+                android:textColor="#7a31d6"
+                android:textSize="21dp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/etDescription4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:textSize="21dp" />
+
+
+            <TextView
+                android:id="@+id/txtChonAudio"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="30dp"
+                android:text=" Audio"
+                android:textColor="#7a31d6"
+                android:textSize="21dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txtNameUri"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:text=""
+                android:textAlignment="center"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/btnAddAudio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textColor="@color/red"
-                android:textStyle="bold"
+                android:layout_gravity="center"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:text="Edit "
+                android:textAlignment="center"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+            <LinearLayout
+                android:layout_margin="30dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
-                android:text="DELETE"
+                <Button
+                    android:id="@+id/btnDelete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Delete" />
 
-                />
-
-            <Button
-
-                android:id="@+id/button5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_weight="1"
-
-                android:textStyle="bold"
-                android:text="UPDATE"
-                android:textColor="#03A9F4" />
+                <Button
+                    android:id="@+id/btnUpdate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Update" />
+            </LinearLayout>
 
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/textView10"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:lines="6"
-            android:layout_weight="1"
-            android:text="" />
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:lines="6"
-            android:layout_weight="1"
-            android:text="" />
-    </LinearLayout>
-</ScrollView>
+
+    </ScrollView>
+
+
+</LinearLayout>
