--- a/app/src/main/res/layout/my_podcast_item.xml
+++ b/app/src/main/res/layout/my_podcast_item.xml
@@ -8,11 +8,11 @@
     android:layout_margin="5dp">
 
     <ImageView
-        android:layout_marginTop="30dp"
+
         android:id="@+id/imgAnhTap"
         android:adjustViewBounds="true"
         android:layout_width="100dp"
-        android:layout_height="150dp"
+        android:layout_height="match_parent"
 
         tools:srcCompat="@tools:sample/avatars" />
 
@@ -65,6 +65,6 @@
             android:layout_height="wrap_content"
             android:textSize="20dp"
             android:textStyle="bold"
-            android:text="uri" />
+            android:text="" />
     </LinearLayout>
 </LinearLayout>
