record chart , popular album , loading ...

--- a/app/src/main/res/layout/fragment_ranking_table.xml
+++ b/app/src/main/res/layout/fragment_ranking_table.xml
@@ -66,20 +66,11 @@
                 android:textSize="30dp"
                 android:textStyle="bold" />
 
-            <View
-                android:id="@+id/view"
-                android:layout_width="0dp"
-                android:layout_height="0.5dp"
-                android:layout_marginTop="15dp"
-                android:background="#929292"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView" />
+
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_margin="10dp">
 
                 <LinearLayout
@@ -121,20 +112,11 @@
                     android:layout_marginTop="8dp" />
 
             </FrameLayout>
-            <View
-                android:id="@+id/view2"
-                android:layout_width="0dp"
-                android:layout_height="0.5dp"
-                android:layout_marginTop="15dp"
-                android:background="#929292"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView" />
+
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="220dp"
                 android:layout_margin="10dp">
 
                 <LinearLayout
@@ -169,11 +151,11 @@
 
                 <ListView
                     android:id="@+id/lvRankingTap"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="178dp"
                     android:layout_marginTop="50dp"
 
-                    android:layout_weight="1" />
+                    />
 
             </FrameLayout>
 
