--- a/app/src/main/res/layout/top_tap.xml
+++ b/app/src/main/res/layout/top_tap.xml
@@ -8,48 +8,40 @@
     <ImageView
         android:layout_marginTop="10dp"
         android:id="@+id/imgTopTap"
-        android:layout_width="90dp"
+        android:layout_width="120dp"
         android:layout_height="100dp"
-        android:layout_weight="1"
+
         app:srcCompat="@drawable/ic_launcher_background" />
 
-    <TextView
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:id="@+id/txtRankingTap"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="10"
-        android:textColor="@color/black"
-        android:textSize="15dp"/>
 
     <LinearLayout
-        android:layout_marginTop="30dp"
-        android:layout_width="wrap_content"
+        android:layout_width="217dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="30dp"
         android:orientation="vertical">
 
         <TextView
+
             android:id="@+id/txtNameRankingTap"
-            android:layout_width="wrap_content"
+            android:layout_width="209dp"
             android:layout_height="wrap_content"
+            android:layout_margin="5dp"
             android:text="105. Còn yêu được cứ yêu đi"
+            android:textColor="@color/black"
             android:textSize="15dp"
-            android:textStyle="bold"
-            android:textColor="@color/black"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/txtTimeRankingTap"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="5dp"
             android:text="Chủ Nhật" />
     </LinearLayout>
     <ImageButton
         android:id="@+id/imgBtnMoreRankingTap"
-        android:layout_marginLeft="5dp"
+        android:layout_marginLeft="10dp"
         android:layout_width="37dp"
         android:layout_height="37dp"
         android:layout_marginEnd="8dp"
